--- a/Ehsan/src/Cocotb_Sequential_Multiplier/makefile
+++ b/Ehsan/src/Cocotb_Sequential_Multiplier/makefile
@@ -7,5 +7,6 @@ clean:
 	rm -rf test/__pycache__
 	rm -rf test/results.xml
 	rm -rf test/sim_build
-	rm -rf test/*.vcd
+	rm -rf *.vcd
+	rm -rf *.out
 
