--- a/Moazzam/.gitignore
+++ b/Moazzam/.gitignore
@@ -1,4 +1,4 @@
-# Prerequisites
+	# Prerequisites
 *.d
 
 
@@ -53,6 +53,8 @@ modules.order
 Module.symvers
 Mkfile.old
 dkms.conf
+
+*cache_with_addr_8/
 
 *work/
 *.cr.mti
