--- a/Ibrahim/src/sequential_logic/4bit_counter/Makefile
+++ b/Ibrahim/src/sequential_logic/4bit_counter/Makefile
@@ -1,50 +1,84 @@
-# Makefile for 4-bit counter project
-
-# Variables
+# Variables 
 SRC_DIR = src
 TEST_DIR = test
+SRC_FILE := $(SRC_DIR)/4bit_counter.sv
+TB_FILE := $(TEST_DIR)/4bit_counter_tb.sv
 
-SRC_FILES = $(SRC_DIR)/4bit_counter.sv
-TB_FILES = $(TEST_DIR)/4bit_counter_tb.sv
-TB_MODULE = counter_tb
-VSIM_CMD = vsim -c -do "run -all; exit"
+TB_CPP := 4bit_counter_tb
+MODULE := counter_tb
+
+# Define Iverilog and VSIM variables
+IVERILOG = iverilog
+VVP = vvp
+VSIM = vsim
+VSIM_FLAGS = -c -do "run -all; quit"
+
+IVERILOG_OUT = iverilog_sim.vvp
+VSIM_OUT = modelsim_sim.out
+GTKWAVE = counter.vcd
+
+# Define Verilator variable
+VERILATOR = verilator
+VERILATOR_FLAGS = -Wall --cc
+
+DEFINES_VER:= src/defines/verilator.svh
 
 # Default target
-all: compile simulate
+all: help
 
-# Compile target
-compile:
-	@echo "Compiling Verilog files..."
-	vlib work
-	vlog $(SRC_FILES)
-	vlog $(TB_FILES)
+# Verilator Compile and run and view waveform
+verilator: 
+	@echo "Running Verilator simulation..."
+	verilator --trace -cc $(SRC_FILE) $(TB_FILE) $(DEFINES_VER) \
+	  	  --top-module $(MODULE)     \
+		  -Wno-DECLFILENAME 		 \
+		  -Wno-WIDTH 				 \
+		  -Wno-REDEFMACRO			 \
+		  -Wno-INITIALDLY			 \
+		  --exe ./test/$(TB_CPP).cpp \
+		  --timing
+	make -C obj_dir -f V$(MODULE).mk V$(MODULE)
+	./obj_dir/V$(MODULE)
+	@echo "Opening waveform with GTKWave..."
+	gtkwave $(GTKWAVE)
 
-# Simulate target
-simulate: compile
-	@echo "Simulating the testbench..."
-	$(VSIM_CMD) $(TB_MODULE)
+# Icarus Verilog compile and run
+iverilog: $(SRC_FILE) $(TB_FILE)
+	@echo "Compiling with Icarus Verilog..."
+	$(IVERILOG) -g2012 -o $(IVERILOG_OUT) $(TB_FILE) $(SRC_FILE)
+	@echo "Running simulation with Icarus Verilog..."
+	$(VVP) $(IVERILOG_OUT)
 
-# View waveform target
-view:
-	@echo "Opening waveform in GTKWave..."
-	gtkwave $(TEST_DIR)/counter.vcd &
+# ModelSim compile and run
+vsim: $(SRC_FILE) $(TB_FILE)
+	@echo "Compiling with ModelSim..."
+	vlog $(SRC_FILE) $(TB_FILE)
+	@echo "Running simulation with ModelSim..."
+	$(VSIM) $(VSIM_FLAGS) $(MODULE)
 
-# Clean the build directory
+# View waveform using GTKWave
+view: 
+	@echo "Opening waveform with GTKWave..."
+	gtkwave $(GTKWAVE)
+
+# Clean up generated files
 clean:
 	@echo "Cleaning up..."
-	rm -rf work
-	rm -f $(VCD_FILE)
+	rm -f $(IVERILOG_OUT) $(VSIM_OUT) $(VCD_FILE) $(GTKWAVE) .stamp.verilate
+	rm -rf work obj_dir
 	@echo "Clean complete."
 
 # Help target
 help:
-	@echo "Makefile Usage:"
-	@echo "  all       : Compile the Verilog files and simulate the testbench"
-	@echo "  compile   : Compile the Verilog files."
-	@echo "  simulate  : Simulate the testbench."
-	@echo "  view      : View the waveform in GTKWave."
-	@echo "  clean     : Clean the generated files and directories."
-	@echo "  help      : Display this help information."
+	@echo "Makefile for compiling and running simulations with Verilator, Icarus Verilog and ModelSim"
+	@echo
+	@echo "Usage:"
+	@echo "  make verilator	     Compile, run simulation and view waveform with Verilator"
+	@echo "  make iverilog       Compile and run simulation with Icarus Verilog"
+	@echo "  make vsim           Compile and run simulation with ModelSim"
+	@echo "  make view           View waveform using GTKWave"
+	@echo "  make clean          Clean up generated files"
+	@echo "  make help           Display this help message"
 
-.PHONY: all compile simulate view clean help
-
+# Phony targets
+.PHONY: all iverilog vsim view clean help verilator
