--- a/Ibrahim/src/sequential_logic/pop_quiz/Makefile
+++ b/Ibrahim/src/sequential_logic/pop_quiz/Makefile
@@ -1,57 +1,84 @@
-# Makefile for the pop_quiz Verilog project
-
-# Variables
+# Variables 
 SRC_DIR = src
 TEST_DIR = test
+SRC_FILE := $(SRC_DIR)/pop_quiz.sv
+TB_FILE := $(TEST_DIR)/pop_quiz_tb.sv
 
-SRC_FILES = $(SRC_DIR)/pop_quiz.sv
-TB_FILE = $(TEST_DIR)/pop_quiz_tb.sv
+TB_CPP := pop_quiz_tb
+MODULE := pop_quiz_tb
 
-# Top module in testbench
-TB_MODULE = pop_quiz_tb
+# Define Iverilog and VSIM variables
+IVERILOG = iverilog
+VVP = vvp
+VSIM = vsim
+VSIM_FLAGS = -c -do "run -all; quit"
 
-# VCD file name
-VCD_FILE = pop_quiz.vcd
-VSIM_CMD = vsim -c -do "run -all; quit"
+IVERILOG_OUT = iverilog_sim.vvp
+VSIM_OUT = modelsim_sim.out
+GTKWAVE = pop_quiz.vcd
+
+# Define Verilator variable
+VERILATOR = verilator
+VERILATOR_FLAGS = -Wall --cc
+
+DEFINES_VER:= src/defines/verilator.svh
 
 # Default target
-all: compile simulate
+all: help
 
-# Compile the Verilog files
-compile:
-	@echo "Compiling Verilog files..."
-	vlib work
-	vlog $(SRC_FILES) $(TB_FILE)
-	@echo "Compilation complete."
+# Verilator Compile and run and view waveform
+verilator: 
+	@echo "Running Verilator simulation..."
+	verilator --trace -cc $(SRC_FILE) $(TB_FILE) $(DEFINES_VER) \
+	  	  --top-module $(MODULE)     \
+		  -Wno-DECLFILENAME 		 \
+		  -Wno-WIDTH 				 \
+		  -Wno-REDEFMACRO			 \
+		  -Wno-INITIALDLY			 \
+		  --exe ./test/$(TB_CPP).cpp \
+		  --timing
+	make -C obj_dir -f V$(MODULE).mk V$(MODULE)
+	./obj_dir/V$(MODULE)
+	@echo "Opening waveform with GTKWave..."
+	gtkwave $(GTKWAVE)
 
-# Simulate the testbench
-simulate:
-	@echo "Simulating the testbench..."
-	$(VSIM_CMD) $(TB_MODULE)
-	@echo "Simulation complete."
+# Icarus Verilog compile and run
+iverilog: $(SRC_FILE) $(TB_FILE)
+	@echo "Compiling with Icarus Verilog..."
+	$(IVERILOG) -g2012 -o $(IVERILOG_OUT) $(TB_FILE) $(SRC_FILE)
+	@echo "Running simulation with Icarus Verilog..."
+	$(VVP) $(IVERILOG_OUT)
 
-# View the waveform in GTKWave
-view: simulate
-	@echo "Opening waveform in GTKWave..."
-	gtkwave $(VCD_FILE)
+# ModelSim compile and run
+vsim: $(SRC_FILE) $(TB_FILE)
+	@echo "Compiling with ModelSim..."
+	vlog $(SRC_FILE) $(TB_FILE)
+	@echo "Running simulation with ModelSim..."
+	$(VSIM) $(VSIM_FLAGS) $(MODULE)
+
+# View waveform using GTKWave
+view: 
+	@echo "Opening waveform with GTKWave..."
+	gtkwave $(GTKWAVE)
 
 # Clean up generated files
 clean:
-	@echo "Cleaning up generated files..."
-	rm -rf work transcript vsim.wlf $(VCD_FILE)
+	@echo "Cleaning up..."
+	rm -f $(IVERILOG_OUT) $(VSIM_OUT) $(VCD_FILE) $(GTKWAVE) .stamp.verilate
+	rm -rf work obj_dir
+	@echo "Clean complete."
 
-# Display help information
+# Help target
 help:
+	@echo "Makefile for compiling and running simulations with Verilator, Icarus Verilog and ModelSim"
+	@echo
 	@echo "Usage:"
-	@echo "  make [target]"
-	@echo ""
-	@echo "Targets:"
-	@echo "  all      - Compile and simulate"
-	@echo "  compile  - Compile the Verilog files"
-	@echo "  simulate - Simulate the testbench"
-	@echo "  view     - View the waveform in GTKWave"
-	@echo "  clean    - Clean up generated files"
-	@echo "  help     - Display this help information"
+	@echo "  make verilator      Compile, run simulation and view waveform with Verilator"
+	@echo "  make iverilog       Compile and run simulation with Icarus Verilog"
+	@echo "  make vsim           Compile and run simulation with ModelSim"
+	@echo "  make view           View waveform using GTKWave"
+	@echo "  make clean          Clean up generated files"
+	@echo "  make help           Display this help message"
 
-# Declare phony targets
-.PHONY: all compile simulate view clean help
+# Phony targets
+.PHONY: all iverilog vsim view clean help verilator
